kustomize/overlays/prod/patch-codex-core-resources.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: codex-core
spec:
  template:
    spec:
      containers:
        - name: codex-core
          resources:
            requests:
              cpu: '500m'
              memory: '512Mi'
            limits:
              cpu: '1'
              memory: '1Gi'
