kustomize/overlays/prod/patch-engine01-resources.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: engine01
  namespace: codex
spec:
  template:
    spec:
      containers:
        - name: engine01
          resources:
            requests:
              cpu: '200m'
              memory: '128Mi'
            limits:
              cpu: '400m'
              memory: '256Mi'
