kustomize/overlays/prod/patch-orchestrator-resources.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: orchestrator
spec:
  template:
    spec:
      containers:
        - name: orchestrator
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
