kustomize/overlays/prod/orchestrator-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orchestrator-ingress
  namespace: codex
  annotations:
    kubernetes.io/ingress.class: 'gce'
    networking.gke.io/managed-certificates: 'codex-cert'
spec:
  rules:
    - host: codexdominion.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: orchestrator
                port:
                  number: 80
